--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"type" : "git",
 		"url" : "git://github.com/richardassar/zpipe"
 	},
-	"devDependencies" : {
-		"mocha" : "*",
-		"chai" : "*"
+	"dependencies" : {
+		"grunt-exec": "*"
 	}
 }
