--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-	"name" : "zpipe",
-	"description" : "JavaScript port of ZLib DEFLATE for the browser",
-	"keywords" : ["compression", "zlib", "deflate"],
-	"version" : "1.0.2",
-	"author" : "Richard Assar <richardassar@googlemail.com>",
-	"main" : "./dist/zpipe.min.js",
-	"scripts" : {
-		"test" : "make test"
-	},
-	"repository" : {
-		"type" : "git",
-		"url" : "git://github.com/richardassar/zpipe"
-	},
-	"dependencies" : {
-		"grunt-exec": "*",
-		"grunt-contrib-nodeunit": "*"
-	}
+  "name": "zpipe",
+  "description": "JavaScript port of ZLib DEFLATE for the browser",
+  "keywords": [
+    "compression",
+    "zlib",
+    "deflate"
+  ],
+  "version": "1.0.2",
+  "author": "Richard Assar <richardassar@googlemail.com>",
+  "main": "./dist/zpipe.min.js",
+  "scripts": {
+    "test": "make test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/richardassar/zpipe"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-exec": "~0.4.0",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-nodeunit": "~0.1.2"
+  }
 }
